// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyFavoriteStore Component MyFavoriteStore should render correctly 1`] = `
<MyProfileTile
  birthdaySaving={false}
  className=""
  ctaLink="accountOverviewMobile"
  ctaTitle="lbl_common_updateFavoriteStore"
  dataLocator="myFavStoreLbl"
  handleComponentChange={[Function]}
  title="lbl_common_myFavoriteStore"
>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    text="Fulton Street"
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    text="471-485 Fulton Street"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      dataLocator=""
      fontSize="fs16"
      margin={null}
      numberOfLines={null}
      text="Brooklyn, "
      textDecoration={null}
    />
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      dataLocator=""
      fontSize="fs16"
      margin={null}
      numberOfLines={null}
      text="NY 11201"
      textDecoration={null}
      textTransform="uppercase"
    />
  </Styled(View)>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    text="(712) 431-1408"
    textDecoration={null}
  />
</MyProfileTile>
`;

exports[`MyFavoriteStore Component should renders correctly when isMyPreferences is false 1`] = `
<MyProfileTile
  birthdaySaving={false}
  className=""
  ctaLink="accountOverviewMobile"
  ctaTitle=""
  dataLocator="myFavStoreLbl"
  handleComponentChange={[Function]}
  title=""
>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-LRG"
    text=""
    textDecoration={null}
  />
</MyProfileTile>
`;

exports[`MyFavoriteStore Component should renders correctly when isMyPreferences is present 1`] = `
<MyProfileTile
  birthdaySaving={false}
  className=""
  ctaLink="accountOverviewMobile"
  ctaTitle=""
  dataLocator="myFavStoreLbl"
  handleComponentChange={[Function]}
  title=""
>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-XXL"
    text=""
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-LRG"
    text=""
    textDecoration={null}
  />
</MyProfileTile>
`;
